# Aerial-Image-Detection

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml
aerial_image_detection/: __init__.py  constants.py  plot_utils.py  raster_utils.py  sahi_inference.py  submit_inference_pipeline.py
aerial_image_detection/create_aml_environment/: Dockerfile  create_azure_env.py
aerial_image_detection/inference/: __init__.py  aerial_image_inference.py  inference_step.py  sahi_model.py
aerial_image_detection/settings/: __init__.py  settings.py  settings_schema.py
aerial_image_detection/utils/: __init__.py  city_area_handler.py  logging_utils.py  pdok_downloader.py  plot_utils.py  raster_utils.py
notebooks/: aerial_image_bgt_exploration.ipynb  aerial_image_pipeline.ipynb  detection_postprocessing.ipynb  download_bgt_data.ipynb
