[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerial_image_detection"
version = "0.1"
description = "Use computer vision models to detect objects in aerial imagery. "
authors = [
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aml_interface",
    "azure-storage-blob>=12.23",
    "cvtoolkit",
    "contextily",
    "geopandas>=1.1.0",
    "matplotlib>=3.9.0",
    "mldesigner>=0.1.0b16",
    "numpy>=1.24.2",
    "opencv-python>=4.6.0",
    "openpyxl>=3.1.5",
    "rasterio>=1.4.3",
    "sahi>=0.11.30",
    "setuptools<82",
    "ultralytics>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "azure-identity-broker",
    "ipykernel>=6.29.4",
    "ipywidgets",
    "nbstripout>=0.7.1",
    "pre-commit>=3.2.0",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "safety>=3.2.4",
]

[tool.uv.sources]
aml_interface = { git = "https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git", tag = "v1.1.5" }
cvtoolkit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git", tag = "v2.0.7" }

[tool.setuptools.packages.find]
include=["aerial_image_detection"]

[tool.isort]
profile = "black"
multi_line_output = 3
